[gd_scene load_steps=2 format=3 uid="uid://bhte7x4mc24ly"]

[ext_resource type="Script" path="res://Assets/Scripts/MainMenuController.gd" id="1_1di2j"]

[node name="MainMenu" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1di2j")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 30.0
offset_top = 6.0
offset_right = 252.0
offset_bottom = 32.0
text = "A Fantasy TwinStick Shooter!"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 30.0
offset_top = 35.0
offset_right = 252.0
offset_bottom = 136.0

[node name="StartButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[node name="OptionsButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Options?"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"
